--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,16 @@
 
 /* =================================================================================================================== */
 /* Если подключаем шрифты вручную */
-/* @font-face {
-	font-family: "CircularStd";
-	src: url("../fonts/CircularStd-Book.woff2") format("woff2"), url("../fonts/CircularStd-Book.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-	font-display: swap; */
+/* 
+	@font-face {
+		font-family: "CircularStd";
+		src: url("../fonts/CircularStd-Book.woff2") format("woff2"), url("../fonts/CircularStd-Book.woff") format("woff");
+		font-weight: 400;
+		font-style: normal;
+		font-display: swap;
+		}
+	
+	*/
 	/* ================================================================================================================ */
 
 	/* /* &display=swap - дописываем если нету (когда используем подгрузку шрифтов через @import/link */
